syntax = "proto3";

package user.v1;

option go_package = "coca-ai/api/user/v1;userv1";

service UserService {
  rpc Signup(SignupReq) returns (SignupResp);
  rpc Login(LoginReq) returns (LoginResp);
  rpc Logout(LogoutReq) returns (LogoutResp);
}

message SignupReq {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message SignupResp {
  int64 id = 1;
}

message LoginReq {
  string email = 1;
  string password = 2;
}

message LoginResp {
  int64 id = 1;
  string ssid = 2; // Session ID / Refresh Token
  string access_token = 3; // JWT Access Token (Optional, depending on implementation)
}

message LogoutReq {
  string ssid = 1;
}

message LogoutResp {}
